--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
+/index.pck filter=lfs diff=lfs merge=lfs -text
 *.pck filter=lfs diff=lfs merge=lfs -text
 *.wasm filter=lfs diff=lfs merge=lfs -text
