--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Ruby (for Jekyll sites)
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.2.x'
+          ruby-version: '3.2.2'
           bundler-cache: true      # caches gems between runs
 
       - name: Install dependencies
