--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 *.pck filter=lfs diff=lfs merge=lfs -text
 /index.pck filter=lfs diff=lfs merge=lfs -text
+.pck filter=lfs diff=lfs merge=lfs -text
+.wasm filter=lfs diff=lfs merge=lfs -text
 *.wasm filter=lfs diff=lfs merge=lfs -text
